@@ -1,3 +1,13 @@
+2012-01-06  Zeno Albisser  <zeno@webkit.org>
+
+        [Qt][WK2] Add test for application URL schemes.
+        https://bugs.webkit.org/show_bug.cgi?id=74933
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        * UIProcess/API/qt/tests/qmltests/WebView/tst_applicationScheme.qml: Added.
+        * UIProcess/API/qt/tests/qmltests/qmltests.pro:
+
 2012-01-05  Dan Bernstein  <mitz@apple.com>
 
         <rdar://problem/10633760> Update copyright strings
